# mindmap

./: .gitignore  3D-TILT-EFFECT.md  HANDOFF.md  README.md  mindmap.html  pyproject.toml  scattermind-2025-12-25(1).json
pymindmap/: __init__.py  app.py  commands.py  geometry.py  io.py  items.py  layout.py  mainwindow.py  model.py  scene.py  theme.py  view.py
pymindmap/integrations/: __init__.py  claude_run.py  dir_link.py  email_send.py  mac_delegate.py  reminder.py
pymindmap/live/: __init__.py  __main__.py  app.py  items.py  mainwindow.py  scene.py  view.py
